Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
There are reproducible test crashes for iphlpapi:GetExtendedUdpTable and iphlpapi:GetOwnerModuleFromUdpEntry (likely because of heap corruption)
See: https://reactos.org/testman/compare.php?ids=69924,69925
Attachments
Issue Links
- blocks
-
CORE-16847 GCC8/RosBE 2.2 non-blocking regressions
-
- Open
-
- is duplicated by
-
CORE-17287 Testbots and local rosautotest Crash on iphlpapi tests using UDP
-
- Resolved
-