[IPHLPAPI] Fix for hasArp which crashes some iphlpapi tests. (#3216)

CORE-16513